tests/expr/range_left_bound_range/stderr.golden
error: left bound of range must be of type integer, current type range
bus.fbd +2:21
   |
 2 |   c config; range = 0:1:2
   |                     ^^^
